Fixed modal not covering the whole page

--- a/client/src/styles/Blogs.css
+++ b/client/src/styles/Blogs.css
@@ -16,6 +16,8 @@
 
 .blogs-body {
     padding: 2rem;
+
+    position: relative;
 }
 
 .blogs-content-title {
@@ -61,7 +63,7 @@
     left: 0;
     top: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background: rgba(0, 0, 0, 0.6);
 
     display: flex;
